# crewai-api

./: .gitignore  .replit  Dockerfile  fly.toml  knowledge.mdx  main.py  pyproject.toml  requirements.txt
app/: main.py  settings.py
app/routes/: agents.py  health.py  v1_router.py
attached_assets/: Pasted--workspace-uvicorn-main-app-reload-INFO-Will-watch-for-changes-in-these-directories-ho-1748714102168.txt
crew/: crew_executor.py  zep_client.py
crew/basic_crew/: crew.py  main.py  zep_client.py
crew/basic_crew/config/: agents.yaml  tasks.yaml
crew/dev_crew/: crew.py  main.py
crew/dev_crew/config/: agents.yaml  tasks.yaml
crew/dev_crew/local_memory/short_term/: chroma.sqlite3
crew/research_crew/: agents.yaml  crew.py  main.py  tasks.yaml
src/research_crew/: agents.yaml  crew.py  main.py  tasks.yaml
tests/: test_api.py
