[project]
name = "crewai-api"
version = "0.1.0"
description = "Crewai API"
authors = [
    { name = "Ivan Luis Ceccato", email = "ilceccato88@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "crewai-tools>=0.46.0",
    "crewai>=0.121.1",
    "fastapi>=0.115.12",
    "pydantic-settings>=2.9.1",
    "pydantic>=2.11.5",
    "starlette>=0.46.2",
    "uvicorn>=0.34.2",
]
