#pyproject.toml
[project]
name = "crewai-api"
version = "0.1.0"
description = "Crewai API"
authors = [
    { name = "Ivan Luis Ceccato", email = "ilceccato88@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.5.23",
    "crewai>=0.121.1",
    "crewai-tools>=0.46.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "pysbd>=0.3.4",
    "pysqlite3-binary>=0.5.4",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
    "starlette>=0.46.2",
    "uvicorn>=0.34.2",
    "websockets>=15.0.1",
    "zep-cloud>=2.13.1",
]


